overflow issue fixed

--- a/workit-landing-page/css/style.scss
+++ b/workit-landing-page/css/style.scss
@@ -18,31 +18,41 @@
     --clr-primary: #24053E;
     --clr-light-green: #44FFA1;
     --clr-white: #ffffff;
+    --clr-text: #584D62;
+    --clr-background: #FCF8FF;
     --mobile-side-margin: 1rem;
 }
 
 body {
     margin: 0;
+    font-family: 'Manrope';
 }
 
+
+.header {
+    font-family: 'Fraunces';
+    color: var(--clr-primary);
+}
 
 .hero {
     min-height: 550px;
     position: relative;
-    padding: 2rem 1rem;
+    // padding: 2rem 1rem;
+    overflow: hidden;
 
 
     &::before {
         content: "";
-        border-bottom-left-radius: 100% 25%;
-        border-bottom-right-radius: 100% 25%;
+        content: "";
         position: absolute;
-        top: 0;
+        bottom: 0;
         z-index: -1;
         width: 100%;
-        background-color: var(--clr-primary);
-        height: 78%;
-        transform: scale(1.5);
+        height: 100vh;
+        background: var(--clr-primary);
+        border-radius: 50%;
+        transform-origin: bottom;
+        transform: translateY(-10%) scale(10);
     }
 
     header {
@@ -88,10 +98,12 @@ body {
     img.image {
         width: 300px;
         position: absolute;
-        bottom: -20px;
+        bottom: 0;
         left: 50%;
         transform: translateX(-50%);
     }
+
+
 
 }
 
@@ -111,4 +123,84 @@ body {
     background: var(--clr-light-green);
     text-decoration: none;
     cursor: pointer;
+}
+
+.action-points {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
+    margin-top: -120px;
+
+    &::before {
+        content: "";
+        content: "";
+        position: absolute;
+        bottom: 0;
+        z-index: -2;
+        width: 100%;
+        height: 100vh;
+        background: var(--clr-background);
+        border-radius: 50%;
+        transform-origin: bottom;
+        transform: translateY(-10%) scale(10);
+    }
+
+    .action-point-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &:nth-of-type(1) {
+            margin-top: 12rem;
+        }
+
+
+
+        .number {
+            span {
+                width: 48px;
+                height: 48px;
+                border: 1px solid var(--clr-text);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: var(--clr-primary);
+                font-family: 'Fraunces';
+                font-size: 20px;
+                font-weight: 600;
+                line-height: 36px;
+                border-radius: 50%;
+            }
+        }
+
+        .info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 1.5rem 0;
+
+            .header {
+                font-size: 28px;
+                font-weight: 600;
+                line-height: 36px;
+                margin-bottom: 1rem;
+            }
+
+            .description {
+                color: var(--clr-text);
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 28px;
+                text-align: center;
+                padding: 0 0.5rem;
+            }
+        }
+    }
+
+    .action-point-item+.action-point-item {
+        margin-top: 2rem;
+    }
 }
